# source-data

./: .gitattributes  CITATION.cff  IKG_shacl_shapes.ttl  README.md  create_prov_graph_and_push.py  datasets.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: create_prov_graph_and_push.yml  validate_and_push.yml
datasets/: apis_data.ttl  bgn_data.ttl  bs_data.ttl  europeana-cho-idm.ttl  provenance_graph.ttl  provided_entities_graph.ttl  sbi_data.ttl
